--- a/floating.html
+++ b/floating.html
@@ -84,7 +84,112 @@
                 </li>
             </ul>
         </div>
+        <!-- Floating -->
+        <div class='services-content-container'>
+            <div class='services-header floating-header'>
 
+            </div>
+            <div class='services-header-title'>
+                What is Floating?
+            </div>
+            <div class='services-header-info'>
+                Floating is a unique environment created by the floatation tank. The tank and room are darkened, disconnecting the body from
+                its sensory inputs allowing the brain to relax. The environment created allows our body to simply relax and
+                take care of itself. This restricted environmental stimulation has been proven to enhance how the brain works.
+                Thus, increasing theta brain waves which one activated by meditation and active during REM sleep. Floating
+                provides you with a tranquility and relaxation that helps with the overwhelming stress of everyday life.
+            </div>
+            <!-- how it works -->
+            <div class='services-howitworks-wrapper'>
+                <div class='services-howitworks-heading'>
+                    How does it work?
+                </div>
+                <div class='services-howitworks-info'>
+                    The tank is filled with water about 1,000 pounds of dissolved Epsom salts, which suspends the body afloat without needing
+                    to swim or tread. The tank helps induce a deep state of relaxation by turning off the body’s stress response,
+                    allowing the body to feel completely weightless and free. Floating can be both passive or active, depending
+                    on the purpose. Active floating as many different techniques such as meditation and mantras. Allowing
+                    the body to become relaxed and the mind becomes reflective.
+                </div>
+            </div>
+            <!-- benefits -->
+            <div class='services-benefits-container'>
+                <table class='services-benefits-table'>
+                    <tbody>
+                        <tr>
+                            <td class='services-benefits'>
+                                <div class='services-benefits-header'>
+                                    Floating Benefits
+                                </div>
+                                <div class='services-benefits-list-wrapper'>
+                                    <div class='services-benefits-list content'>
+                                        Floating has a positive effect on the body and mind, remaining for days or even weeks after. Floating relaxes the brain allowing
+                                        an increasing connection between the two brain hemispheres. This allows the brain
+                                        to feel balanced spiritually, mentally, and physically. The float will also have
+                                        a positive effect on memory, allowing one to recall information and activity.
+
+                                    </div>
+                                </div>
+                            </td>
+                            <td class='services-benefits float-benefit-img-1'>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class='services-benefits float-benefit-img-2'>
+
+                            </td>
+                            <td class='services-benefits'>
+                                <div class='services-benefits-header'>
+                                    Epsom Salt Benefits
+                                </div>
+                                <div class='services-benefits-list-wrapper'>
+                                    <div class='services-benefits-list content'>
+                                        The Epsom Salts help to balance calcium levels in the body, reduce stress, balance hormones, normalize blood pressure, reduce
+                                        risks of cancer and much more. The Magnesium salts ease stress, improve sleep and
+                                        concentration. It allows the muscles and nerves to function properly. The sulfate
+                                        salts can help the body flush toxins from the body and improve absorption of nutrients.
+                                        It also helps form joint proteins and brain tissue to help prevent or ease migraines.
+
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class='services-benefits'>
+                                <div class='services-benefits-header'>
+                                    Try Floating Today
+                                </div>
+                                <div class='services-benefits-list-wrapper'>
+                                    <div class='services-benefits-list content clear'>
+                                        <div class='services-cost-wrapper'>
+                                            <div class='services-cost-text'>Price</div>
+                                            <div class='services-cost-text'>
+                                                $68 / 90 Minutes
+                                            </div>
+                                        </div>
+                                        <div class='services-cost-wrapper'>
+                                            <div class='services-cost-text'>Includes</div>
+                                            <ul class='serviecs-cost-list'>
+                                                <li class='services-cost-listitem'>Includes preparation time and shower time</li>
+                                                <li class='services-cost-listitem'>A full hour will be spent in float pod</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class='services-benefits float-benefit-img-3'>
+                                <div class='book-benefit-text'>
+                                    Turn off outside inputs, relax and float.
+                                </div>
+                                <div class='book-benefit-btn-wrapper'>
+                                    <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
 
