--- a/hydromassage.html
+++ b/hydromassage.html
@@ -86,36 +86,35 @@
         </div>
 
         <!-- hydro info -->
-        <div class='hydro-header-container'>
-            <div class='hydro-header'>
-                <img src='./images/hydro_header.jpg' alt='HydroMassage Chair'>
+        <div class='services-content-container'>
+            <div class='services-header hydromassage-header'>
             </div>
-            <div class='hydro-header-title'>What is HydroMassage?</div>
-            <div class='hydro-header-info'>
+            <div class='services-header-title'>What is HydroMassage?</div>
+            <div class='services-header-info'>
                 HydroMassage lounge gives you all the benefits of a massage without getting wet. HydroMassage is designed to use waves of
                 heated water to provide an innovative experience.
             </div>
-            <div class='hydro-benefits-container'>
-                <table class='hydro-benefits-table'>
+            <div class='services-benefits-container'>
+                <table class='services-benefits-table'>
                     <tbody>
                         <tr>
-                            <td class='hydro-benefits'>
-                                <div class='hydro-benefits-header'>
+                            <td class='services-benefits'>
+                                <div class='services-benefits-header'>
                                     HydroMassage Benefits
                                 </div>
-                                <div class='hydro-benefits-list-wrapper'>
-                                    <ul class='hydro-benefits-list'>
-                                        <li class='hydro-benefit-listitem'>Reduce levels of stress and anxiety</li>
-                                        <li class='hydro-benefit-listitem'>Temporary relief of minor aches and pains</li>
-                                        <li class='hydro-benefit-listitem'>Increases circulation</li>
-                                        <li class='hydro-benefit-listitem'>Relieves muscle soreness, stiffness, and tension</li>
-                                        <li class='hydro-benefit-listitem'>Adjustable to your needs or preferences</li>
-                                        <li class='hydro-benefit-listitem'>Adjust your own intensity, speed, and temperature</li>
-                                        <li class='hydro-benefit-listitem'>Comfortable, convenient, and affordable</li>
+                                <div class='services-benefits-list-wrapper'>
+                                    <ul class='services-benefits-list'>
+                                        <li class='services-benefit-listitem'>Reduce levels of stress and anxiety</li>
+                                        <li class='services-benefit-listitem'>Temporary relief of minor aches and pains</li>
+                                        <li class='services-benefit-listitem'>Increases circulation</li>
+                                        <li class='services-benefit-listitem'>Relieves muscle soreness, stiffness, and tension</li>
+                                        <li class='services-benefit-listitem'>Adjustable to your needs or preferences</li>
+                                        <li class='services-benefit-listitem'>Adjust your own intensity, speed, and temperature</li>
+                                        <li class='services-benefit-listitem'>Comfortable, convenient, and affordable</li>
                                     </ul>
                                 </div>
                             </td>
-                            <td class='hydro-benefits hydro-chair-img'>
+                            <td class='services-benefits hydro-chair-img'>
                             </td>
                         </tr>
                     </tbody>
