--- a/massage.html
+++ b/massage.html
@@ -84,7 +84,272 @@
                 </li>
             </ul>
         </div>
+        <!-- Floating -->
+        <div class='services-content-container'>
+            <div class='services-header massage-header'>
+            </div>
 
+            <!-- Massages -->
+
+            <div class='services-benefits-container'>
+                <table class='services-benefits-table'>
+                    <tbody>
+                        <!-- signature -->
+                        <tr>
+                            <td class='services-benefits massage-service'>
+                                <div class='services-benefits-header'>
+                                    Float Spa 19 Signature Massage
+                                </div>
+                                <div class='services-benefits-list-wrapper clear'>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>30 Min</div>
+                                            <div class='service-cost'>$50</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>60 Min</div>
+                                            <div class='service-cost'>$80</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>90 Min</div>
+                                            <div class='service-cost'>$120</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-book-wrapper'>
+                                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class='services-benefits massage-img-1'>
+                            </td>
+                        </tr>
+                        <!-- oriental reflexology -->
+                        <tr>
+                            <td class='services-benefits massage-img-2'>
+                            </td>
+                            <td class='services-benefits massage-service'>
+                                <div class='services-benefits-header'>
+                                    Oriental Reflexology
+                                </div>
+                                <div class='services-benefits-list-wrapper clear'>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>30 Min</div>
+                                            <div class='service-cost'>$50</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>60 Min</div>
+                                            <div class='service-cost'>$80</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>90 Min</div>
+                                            <div class='service-cost'>$120</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-book-wrapper'>
+                                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                    </div>
+                                </div>
+                            </td>
+
+                        </tr>
+                        <!-- hot stone -->
+                        <tr>
+                            <td class='services-benefits massage-service'>
+                                <div class='services-benefits-header'>
+                                    Hot Stone Massage
+                                </div>
+                                <div class='services-benefits-list-wrapper clear'>
+
+                                    <div class='service-cost-item w1-2'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>60 Min</div>
+                                            <div class='service-cost'>$80</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-2'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>90 Min</div>
+                                            <div class='service-cost'>$120</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-book-wrapper'>
+                                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class='services-benefits massage-img-3'>
+                            </td>
+                        </tr>
+                        <!-- Thai -->
+                        <tr>
+                            <td class='services-benefits massage-img-4'>
+                            </td>
+                            <td class='services-benefits massage-service'>
+                                <div class='services-benefits-header'>
+                                    Thai Massage
+                                </div>
+                                <div class='services-benefits-list-wrapper clear'>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>30 Min</div>
+                                            <div class='service-cost'>$50</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>60 Min</div>
+                                            <div class='service-cost'>$80</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>90 Min</div>
+                                            <div class='service-cost'>$120</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-book-wrapper'>
+                                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                    </div>
+                                </div>
+                            </td>
+
+                        </tr>
+                        <!-- Prenatal -->
+                        <tr>
+                            <td class='services-benefits massage-service'>
+                                <div class='services-benefits-header'>
+                                    Prenatal Massage
+                                </div>
+                                <div class='services-benefits-list-wrapper clear'>
+
+                                    <div class='service-cost-item w1-2'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>60 Min</div>
+                                            <div class='service-cost'>$80</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-2'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>90 Min</div>
+                                            <div class='service-cost'>$120</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-book-wrapper'>
+                                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class='services-benefits massage-img-5'>
+                            </td>
+                        </tr>
+                        <!-- Swedish -->
+                        <tr>
+                            <td class='services-benefits massage-img-6'>
+                            </td>
+                            <td class='services-benefits massage-service'>
+                                <div class='services-benefits-header'>
+                                    Swedish/Deep Tissue
+                                </div>
+                                <div class='services-benefits-list-wrapper clear'>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>30 Min</div>
+                                            <div class='service-cost'>$50</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>60 Min</div>
+                                            <div class='service-cost'>$80</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-3'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>90 Min</div>
+                                            <div class='service-cost'>$120</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-book-wrapper'>
+                                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                    </div>
+                                </div>
+                            </td>
+
+                        </tr>
+                        <!-- Couple massage -->
+                        <tr>
+                            <td class='services-benefits massage-service'>
+                                <div class='services-benefits-header'>
+                                    Couple Massage
+                                </div>
+                                <div class='services-benefits-list-wrapper clear'>
+
+                                    <div class='service-cost-item w1-2'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>60 Min</div>
+                                            <div class='service-cost'>$80</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-item w1-2'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>90 Min</div>
+                                            <div class='service-cost'>$120</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-book-wrapper'>
+                                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class='services-benefits massage-img-7'>
+                            </td>
+                        </tr>
+                        <!-- Nirvana -->
+                        <tr>
+                            <td class='services-benefits massage-img-8'>
+                            </td>
+                            <td class='services-benefits massage-service'>
+                                <div class='services-benefits-header'>
+                                    Nirvana Massage
+                                </div>
+                                <div class='services-benefits-list-wrapper clear'>
+                                    <div class='service-cost-item'>
+                                        <div class='service-cost-item-padder'>
+                                            <div class='service-duration'>60 Min</div>
+                                            <div class='service-cost'>$120</div>
+                                        </div>
+                                    </div>
+                                    <div class='service-cost-book-wrapper'>
+                                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                    </div>
+                                </div>
+                            </td>
+
+                        </tr>
+                        <!-- add on -->
+                        <tr>
+                            <td class='services-benefits'>
+                                <div class='services-addon-text'>Add-ons include: Aromatherapy Oil ($10)</div>
+                            </td>
+                            <td class='services-benefits'>
+                                <div class='services-addon-btn-wrapper'>
+                                    <a class='btn btn-book' href='./book.html'>Book Now</a>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
 
