try today button style

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             Relax, Restore, and Refresh
         </div>
         <div class='carousel-btn-wrapper'>
-            <button class='btn btn-carousel'>Try Today</button>
+            <a class='btn btn-carousel' href='./book.html'>Try Today</a>
         </div>
     </div>
 
